// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAccount should return current account 1`] = `
Account {
  "_created": 2020-01-01T07:00:00.000Z,
  "_email": "email@lindorm.io",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_created",
      "payload": Object {
        "created": 2020-01-01T07:00:00.000Z,
        "email": "email@lindorm.io",
        "otp": Object {
          "signature": null,
          "uri": null,
        },
        "password": Object {
          "signature": null,
          "updated": null,
        },
        "permission": "user",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_identityLinked": false,
  "_otp": Object {
    "signature": null,
    "uri": null,
  },
  "_password": Object {
    "signature": null,
    "updated": null,
  },
  "_permission": "user",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`getAccount should return repository account 1`] = `
Account {
  "_created": 2020-01-01T07:00:00.000Z,
  "_email": "other@lindorm.io",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_created",
      "payload": Object {
        "created": 2020-01-01T07:00:00.000Z,
        "email": "other@lindorm.io",
        "otp": Object {
          "signature": null,
          "uri": null,
        },
        "password": Object {
          "signature": null,
          "updated": null,
        },
        "permission": "user",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_id": "e1364c08-f2f3-41f7-b4a4-108928c3d1bb",
  "_identityLinked": false,
  "_otp": Object {
    "signature": null,
    "uri": null,
  },
  "_password": Object {
    "signature": null,
    "updated": null,
  },
  "_permission": "user",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;
